--- a/src/pages/Experties/Style/Experties.css
+++ b/src/pages/Experties/Style/Experties.css
@@ -3,12 +3,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 50px 0;
+  padding: 40px var(--inline-padding) 87px var(--inline-padding);
 }
 
 .experties-container {
   display: flex;
-  gap: 35px;
+  gap: 50px;
   width: 100%;
   justify-content: center;
 }
@@ -25,10 +25,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 16.6666666667%;
 }
 .expertie h6 {
-  font-size: 23px;
+  font-size: clamp(20px, 5vw, 25px);
   color: #293560;
   font-weight: 700;
   margin-top: 2rem;
@@ -36,7 +35,7 @@
 }
 
 .expertie-image {
-  width: clamp(8rem, 10.5vw, 15rem);
+  width: clamp(9.2rem, 12vw, 15rem);
   border-radius: 300px;
   aspect-ratio: 1/1;
   border: 2px solid rgba(208, 235, 255, 0.9);
@@ -47,12 +46,13 @@
     flex-direction: row;
     flex-wrap: wrap;
   }
-  .expertie {
-    width: 28.5714285714%;
-  }
 }
-@media (max-width: 770px) {
+@media (max-width: 770) {
   .expertie {
-    width: 41.6666666667%;
+    width: clamp(8rem, 25vw, 15rem);
+  }
+  .expertie h6 {
+    font-size: 15px;
+    margin-top: 2rem;
   }
 }/*# sourceMappingURL=Experties.css.map */
