--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,36 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap");
+
+:root {
+  --inline-padding: clamp(30px, 4vw, 120px);
+  --text-primary: #242d49;
+  --background-color: rgb(238, 237, 231);
+  --text-secondary: #788097;
+}
+
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Quicksand;
 }
 html {
+  background-color: var(--background-color);
   scroll-behavior: smooth;
   overflow-x: hidden;
-  font-family: Arial, Helvetica, sans-serif;
 }
 body {
   margin: 0;
 }
+
 .app {
-  background-color: white;
   height: 95vh;
   display: flex;
   flex-direction: column;
+  gap: 150px;
 }
 .lecture-and-experties {
   background-image: url("./utils/assets/twofacetwo.png");
-  box-shadow: inset 0 0 0 1000px rgba(208, 235, 255, 0.9);
+  box-shadow: inset 0 0 0 1000px rgba(238, 237, 231, 0.9);
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
