--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: white;
+  background-color: var(--background-color);
   position: static;
   width: 100%;
   height: 1rem;
