--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,6 @@
 @import "../../Style/Variables.scss";
 .footer {
-  background-color: $primary-color;
+  background-color: var(--background-color);
   position: static;
   width: 100%;
   height: 1rem;
