--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,12 +1,14 @@
+@import "../../App.css";
 .navbar-cover {
-  background-color: white;
+  background-color: var(--background-color);
   position: static;
   width: 100%;
   height: 5rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding-top: 0.5rem;
+  padding-top: 4.5rem;
+  padding-inline: var(--inline-padding);
 }
 
 .logo {
@@ -16,23 +18,22 @@
   font-style: normal;
   font-size: 2.2rem;
   line-height: 3rem;
-  font-family: Bodoni;
 }
 
 .nav-list {
   display: flex;
   flex-direction: row;
-  width: 40rem;
   padding: 0.5rem;
   justify-content: space-evenly;
   list-style: none;
-  gap: 30px;
+  gap: 60px;
+  font-size: 20px;
 }
 
 .nav-link {
   text-decoration: none;
   color: #293560;
-  background-color: white;
+  background-color: var(--background-color);
   border: none;
   font-weight: 550;
   text-align: center;
@@ -51,27 +52,6 @@
 }
 .nav-selcted:hover {
   color: #5193fb;
-}
-
-.contact {
-  display: inline-block;
-  width: 11rem;
-  border-radius: 2em;
-  border-color: #5193fb;
-  box-sizing: border-box;
-  text-decoration: none;
-  font-weight: 300;
-  color: #293560;
-  background-color: #5193fb;
-  text-align: center;
-  transition: all 0.2s;
-  font-size: 21px;
-  padding: 18px 34px;
-}
-.contact:hover {
-  background-color: #293560;
-  cursor: pointer;
-  color: white;
 }
 
 .drawer-and-button-container {
@@ -98,11 +78,6 @@
   color: #293560;
 }
 
-@media (max-width: 1000px) {
-  .nav-list {
-    width: 40rem;
-  }
-}
 @media (max-width: 770px) {
   .navbar-cover {
     flex-direction: row-reverse;
@@ -121,7 +96,4 @@
   .nav-list {
     display: none;
   }
-  .contact {
-    display: none;
-  }
-} /*# sourceMappingURL=Navbar.css.map */
+}/*# sourceMappingURL=Navbar.css.map */
