--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,14 +1,15 @@
 @import "../../Style/Variables.scss";
-
+@import "../../App.css";
 .navbar-cover {
-  background-color: $primary-color;
+  background-color: var(--background-color);
   position: static;
   width: 100%;
   height: 5rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding-top: 0.5rem;
+  padding-top: 4.5rem;
+  padding-inline: var(--inline-padding);
 }
 .logo {
   color: $text-color;
@@ -17,23 +18,21 @@
   font-style: normal;
   font-size: 2.2rem;
   line-height: 3rem;
-  width: 15rem;
-  font-family: Bodoni;
 }
 .nav-list {
   display: flex;
   flex-direction: row;
-  width: 40rem;
   padding: 0.5rem;
   justify-content: space-evenly;
   list-style: none;
-  gap: 30px;
+  gap: 60px;
+  font-size: 20px;
 }
 
 .nav-link {
   text-decoration: none;
   color: $text-color;
-  background-color: $primary-color;
+  background-color: var(--background-color);
   border: none;
   font-weight: 550;
   text-align: center;
@@ -51,28 +50,6 @@
 
   &:hover {
     color: $secondary-color;
-  }
-}
-
-.contact {
-  display: inline-block;
-  width: 11rem;
-  margin: 0 0em 0.3em 2rem;
-  border-radius: 2em;
-  border-color: $secondary-color;
-  box-sizing: border-box;
-  text-decoration: none;
-  font-weight: 300;
-  color: $text-color;
-  background-color: $secondary-color;
-  text-align: center;
-  transition: all 0.2s;
-  font-size: 21px;
-  padding: 18px 34px;
-  &:hover {
-    background-color: $text-color;
-    cursor: pointer;
-    color: white;
   }
 }
 
@@ -99,11 +76,6 @@
   }
 }
 
-@media (max-width: 1000px) {
-  .nav-list {
-    width: 40rem;
-  }
-}
 @media (max-width: 770px) {
   .navbar-cover {
     flex-direction: row-reverse;
@@ -122,7 +94,7 @@
   .nav-list {
     display: none;
   }
-  .contact {
-    display: none;
-  }
+  // .contact {
+  //   display: none;
+  // }
 }
