--- a/src/pages/Experience/Style/Experience.css
+++ b/src/pages/Experience/Style/Experience.css
@@ -15,32 +15,19 @@
 }
 .experience-text-container h1 {
   margin: auto;
-  margin-bottom: 3rem;
-}
-
-.exprience-list-item {
-  display: flex;
-  width: clamp(14rem, 28vw, 18rem);
-  border-radius: 20px;
-  border: 2px solid rgb(235, 233, 233);
-  text-align: center;
-  background-color: rgb(214, 250, 250);
-  padding: 10px 20px;
-  line-height: 2;
-  font-weight: 400;
-  font-size: 1.1rem;
-  letter-spacing: 1px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+  margin-bottom: 5rem;
+  font-size: 2rem;
 }
 
 .experience-list {
   display: flex;
   flex-direction: row;
   list-style: none;
-  width: 100vw;
+  width: 85vw;
   gap: 3rem;
   justify-content: center;
   padding: 0;
+  flex-wrap: wrap;
 }
 
 @media (max-width: 770px) {
