--- a/src/pages/Experties/Style/Experties.scss
+++ b/src/pages/Experties/Style/Experties.scss
@@ -39,11 +39,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 50px 0;
+  padding: 40px var(--inline-padding) 87px var(--inline-padding);
 }
 .experties-container {
   display: flex;
-  gap: 35px;
+  gap: 50px;
   width: 100%;
   justify-content: center;
 }
@@ -58,10 +58,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: calc(100% / 6);
+  // border: red 1px solid;
+  // width: clamp(15rem, 25vw, 15rem);
 
   h6 {
-    font-size: 23px;
+    font-size: clamp(20px, 5vw, 25px);
     color: $text-color;
     font-weight: 700;
     margin-top: 2rem;
@@ -70,7 +71,7 @@
   }
 }
 .expertie-image {
-  width: clamp(8rem, 10.5vw, 15rem);
+  width: clamp(9.2rem, 12vw, 15rem);
   border-radius: 300px;
   aspect-ratio: 1/1;
   border: 2px solid rgba(208, 235, 255, 0.9);
@@ -81,13 +82,14 @@
     flex-direction: row;
     flex-wrap: wrap;
   }
-  .expertie {
-    width: calc(100% / 3.5);
-  }
 }
-
-@media (max-width: 770px) {
+@media (max-width: 770) {
   .expertie {
-    width: calc(100% / 2.4);
+    width: clamp(8rem, 25vw, 15rem);
+
+    h6 {
+      font-size: 15px;
+      margin-top: 2rem;
+    }
   }
 }
