--- a/src/pages/Lecture/Style/Lecture.css
+++ b/src/pages/Lecture/Style/Lecture.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 50px 0;
+  padding: 40px var(--inline-padding) 90px var(--inline-padding);
 }
 
 .lecture-container {
