--- a/src/pages/Treatment/Style/Treatment.css
+++ b/src/pages/Treatment/Style/Treatment.css
@@ -3,8 +3,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 50px 0;
+  padding: 50px var(--inline-padding);
   font-size: 1.1rem;
+  background-color: white;
 }
 
 .home-study {
