--- a/src/pages/Home/Style/Home.scss
+++ b/src/pages/Home/Style/Home.scss
@@ -13,8 +13,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-  gap: 5rem;
+  justify-content: center;
+  gap: clamp(2rem, 10vw, 10rem);
   width: 100%;
 }
 .home-profile-text {
@@ -101,8 +101,7 @@
 }
 
 .home-profile-image {
-  width: clamp(15rem, 40vw, 25rem);
-
+  width: clamp(21rem, 40vw, 25rem);
   border-radius: 20px;
   border: 2px solid rgb(235 233 233);
 }
@@ -137,6 +136,9 @@
   }
 }
 @media (max-width: 770px) {
+  .home {
+    padding-bottom: 1rem;
+  }
   .home-profile {
     display: flex;
     flex-direction: column;
@@ -144,14 +146,17 @@
     justify-content: center;
     gap: 2rem;
   }
-
+  .home-profile-image {
+    width: 16rem;
+  }
   .home-profile-text {
     align-items: center;
+    gap: 28px;
     p {
       text-align: center;
     }
   }
   .contact {
-    margin-top: 3rem;
+    margin-top: 0.5rem;
   }
 }
