--- a/src/pages/Treatment/Style/Treatment.css
+++ b/src/pages/Treatment/Style/Treatment.css
@@ -10,11 +10,10 @@
 
 .home-study {
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: center;
   width: 100%;
-  gap: 5rem;
+  gap: clamp(2rem, 5vw, 5rem);
   flex-direction: row-reverse;
 }
 
@@ -28,15 +27,13 @@
 .home-study-text h1 {
   margin: 0rem;
   margin-bottom: 1rem;
-}
-.home-study-text h3 {
-  margin-top: 0.8rem;
+  font-size: 1.8rem;
 }
 .home-study-text p {
   margin: 20px 0;
   line-height: 2;
-  font-weight: 400;
-  font-size: 1.1rem;
+  font-weight: 549;
+  font-size: 1.25rem;
   letter-spacing: 1px;
 }
 
