--- a/src/pages/Home/Style/Home.css
+++ b/src/pages/Home/Style/Home.css
@@ -11,8 +11,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-  gap: 5rem;
+  justify-content: center;
+  gap: clamp(2rem, 10vw, 10rem);
   width: 100%;
 }
 
@@ -95,7 +95,7 @@
 }
 
 .home-profile-image {
-  width: clamp(15rem, 40vw, 25rem);
+  width: clamp(21rem, 40vw, 25rem);
   border-radius: 20px;
   border: 2px solid rgb(235, 233, 233);
 }
@@ -135,6 +135,9 @@
 }
 
 @media (max-width: 770px) {
+  .home {
+    padding-bottom: 1rem;
+  }
   .home-profile {
     display: flex;
     flex-direction: column;
@@ -142,13 +145,17 @@
     justify-content: center;
     gap: 2rem;
   }
+  .home-profile-image {
+    width: 16rem;
+  }
   .home-profile-text {
     align-items: center;
+    gap: 28px;
   }
   .home-profile-text p {
     text-align: center;
   }
   .contact {
-    margin-top: 3rem;
+    margin-top: 0.5rem;
   }
 }/*# sourceMappingURL=Home.css.map */
