--- a/src/pages/Treatment/Style/Treatment.scss
+++ b/src/pages/Treatment/Style/Treatment.scss
@@ -1,39 +1,4 @@
 @import "../../../Style/Variables.scss";
-@mixin picAndTextDiv {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  gap: 5rem;
-}
-@mixin imageSize {
-  width: clamp(20rem, 40vw, 25rem);
-  border-radius: 20px;
-  border: 2px solid rgba(212, 211, 211);
-}
-@mixin textStyle {
-  color: $text-color;
-  direction: rtl;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-
-  h1 {
-    margin: 0rem;
-    margin-bottom: 1rem;
-  }
-  h3 {
-    margin-top: 0.8rem;
-  }
-  p {
-    margin: 20px 0;
-    line-height: 2;
-    font-weight: 400;
-    font-size: 1.1rem;
-    letter-spacing: 1px;
-  }
-}
 .Treatment {
   display: flex;
   flex-direction: column;
@@ -44,14 +9,37 @@
   background-color: white;
 }
 .home-study {
-  @include picAndTextDiv;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: clamp(2rem, 5vw, 5rem);
   flex-direction: row-reverse;
 }
 .home-study-text {
-  @include textStyle;
+  color: $text-color;
+  direction: rtl;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  h1 {
+    margin: 0rem;
+    margin-bottom: 1rem;
+    font-size: 1.8rem;
+  }
+  p {
+    margin: 20px 0;
+    line-height: 2;
+    font-weight: 549;
+    font-size: 1.25rem;
+    letter-spacing: 1px;
+  }
 }
 .home-study-image {
-  @include imageSize;
+  width: clamp(20rem, 40vw, 25rem);
+  border-radius: 20px;
+  border: 2px solid rgba(212, 211, 211);
 }
 @media (max-width: 770px) {
   .home-study {
