--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   --text-primary: #242d49;
   --background-color: rgb(238, 237, 231);
   --text-secondary: #788097;
+  --special-color: #1089ff;
 }
 
 * {
