--- a/src/components/Drawer/Drawer.scss
+++ b/src/components/Drawer/Drawer.scss
@@ -3,14 +3,13 @@
   font-size: 2rem;
 }
 
-.drawer-list {
-}
-.drawer-button-continer {
-  margin-top: 2rem;
-}
+// .drawer-list {
+// }
+// .drawer-button-continer {
+// }
 
-.drawer-button {
-}
+// .drawer-button {
+// }
 .drawer-all-comp-contianer {
   display: flex;
 }
