--- a/src/pages/Home/Style/Home.scss
+++ b/src/pages/Home/Style/Home.scss
@@ -33,7 +33,7 @@
     gap: 10px;
 
     .colored-title {
-      color: rgb(0, 136, 214);
+      color: var(--special-color);
     }
     h1 {
       font-size: 60px;
