--- a/src/pages/Contact/Style/Contact.css
+++ b/src/pages/Contact/Style/Contact.css
@@ -6,10 +6,69 @@
   background-color: var(--background-color);
   padding: 50px 0 0 0;
   color: #293560;
+  margin: 100px;
 }
 .contact-cover h1 {
   margin-top: 1rem;
   margin-bottom: 2.5rem;
+}
+
+.contact-boxes-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  line-height: 1.8;
+}
+
+.contact-info-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  background-color: var(--special-color);
+  height: 650px;
+  padding: 25px;
+  margin-left: -20px;
+  border-radius: 5px;
+  color: white;
+}
+.contact-info-container h1 {
+  font-weight: 549;
+}
+
+.contact-info-items-list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 25px;
+}
+
+.contact-info-item {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: flex-start;
+}
+
+.contact-info-item-icon-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.contact-info-item-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.contact-info-item-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 4px;
 }
 
 .contact-form {
@@ -18,9 +77,9 @@
   align-items: flex-end;
   justify-content: center;
   gap: 1rem;
-  background-color: rgba(81, 147, 251, 0.35);
+  background-color: white;
+  height: 650px;
   padding: 40px 70px;
-  border-radius: 20px;
 }
 .contact-form p {
   color: red;
