--- a/src/pages/Experties/Style/Experties.css
+++ b/src/pages/Experties/Style/Experties.css
@@ -27,7 +27,7 @@
   align-items: center;
 }
 .expertie h6 {
-  font-size: clamp(20px, 5vw, 25px);
+  font-size: 1.45rem;
   color: #293560;
   font-weight: 700;
   margin-top: 2.2rem;
