--- a/src/pages/Home/Style/Home.css
+++ b/src/pages/Home/Style/Home.css
@@ -158,4 +158,7 @@
   .contact {
     margin-top: 0.5rem;
   }
+  .home-profile-text .paragraph-section p {
+    line-height: 1.7;
+  }
 }/*# sourceMappingURL=Home.css.map */
