--- a/src/pages/Home/Style/Home.scss
+++ b/src/pages/Home/Style/Home.scss
@@ -159,4 +159,11 @@
   .contact {
     margin-top: 0.5rem;
   }
+  .home-profile-text {
+    .paragraph-section {
+      p {
+        line-height: 1.7;
+      }
+    }
+  }
 }
