--- a/src/pages/Treatment/Style/Treatment.css
+++ b/src/pages/Treatment/Style/Treatment.css
@@ -56,6 +56,7 @@
     align-items: center;
   }
   .home-study-text p {
+    line-height: 1.7;
     text-align: center;
   }
 }/*# sourceMappingURL=Treatment.css.map */
