--- a/src/pages/Contact/Style/Contact.scss
+++ b/src/pages/Contact/Style/Contact.scss
@@ -14,11 +14,13 @@
     margin-bottom: 2.5rem;
   }
 }
+
 .contact-boxes-container {
   display: flex;
   flex-direction: row;
   align-items: center;
   line-height: 1.8;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .contact-info-container {
   display: flex;
@@ -69,14 +71,10 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  justify-content: center;
   gap: 1rem;
-  // background-color: rgba($secondary-color, 0.35);
   background-color: white;
   height: 650px;
-  padding: 40px 70px;
-  // border-radius: 20px;
-  // border-radius: 5px;
+  padding: 20px 50px;
   p {
     color: red;
     margin: 0 0 0 0;
@@ -89,32 +87,29 @@
     margin-bottom: 0.4rem;
   }
 }
-.contact-submit {
-  align-self: center;
-}
-.constact-icon-and-input {
+// .contact-submit {
+// }
+.all-inputs-continer {
   display: flex;
-  align-items: center;
-  flex-direction: row-reverse;
-  gap: 0.5rem;
-  background-color: white;
-  border-radius: 6px;
-  font-size: 1.2rem;
-  font-weight: 540;
-  padding: 0.4rem 0.6rem;
-  height: 2.5rem;
-  width: 18rem;
-  border: 3px solid rgb(128, 128, 128, 0.3);
-
-  &:has(input:focus) {
-    border: 2px solid $text-color;
-  }
-  &:focus {
-    transition: all 0.1s;
-    border: 2px solid rgb(63, 130, 230);
-    outline: none;
-  }
+  flex-direction: column;
+  gap: 3rem;
+  align-items: flex-end;
 }
+.contact-name-and-phone-inputs {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 100%;
+  gap: 1rem;
+}
+.contact-text-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.contact-input-container {
+  width: 100%;
+}
+
 .contact-name {
   font-size: 0.95rem;
   font-weight: 540;
@@ -155,33 +150,41 @@
     border: 2px solid $text-color;
   }
 }
+.css-1j3a5ol-JoyTextarea-root {
+  border: 1px solid #c4c4c4 !important;
+  &:hover {
+    border: 1px solid black !important;
+  }
+}
+.contact-text-input {
+  box-shadow: none;
+}
 .contact-submit {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba($secondary-color, 0.7);
-  border-radius: 15px;
-  color: rgb(252, 252, 252);
-  height: 4rem;
-  width: 13rem;
-  font-size: 1rem;
-  font-weight: 600;
-  margin-top: 2rem;
-
-  border: none;
-
+  color: white;
+  background-color: var(--special-color);
+  width: 125px;
+  height: 45px;
+  padding: 16px 12px;
+  border: transparent;
+  border-radius: 5px;
+  font-weight: 549;
+  font-size: 0.93rem;
   &:hover {
     cursor: pointer;
-    background-color: $text-color;
-    transition: all 0.16s;
+    background-color: #0367ca;
+    transition: all 0.3s;
   }
 }
 .input-error {
   display: flex;
   flex-direction: row-reverse;
+  align-items: center;
   gap: 0.3rem;
   font-weight: 540;
-  margin-top: 0.5rem;
+  margin-top: 0rem;
   color: red;
   font-size: 1.03rem;
 }
@@ -190,8 +193,16 @@
   border: 1px solid red;
   transition: all 0.1s;
 }
-@media (max-width: 500px) {
+@media (max-width: 770px) {
   .contact-form {
-    padding: 40px 35px;
+    align-items: center;
+  }
+  .all-inputs-continer {
+    gap: 3rem;
+    align-items: center;
+  }
+
+  .contact-info-container {
+    display: none;
   }
 }
