--- a/src/pages/Experience/Style/Experience.css
+++ b/src/pages/Experience/Style/Experience.css
@@ -2,7 +2,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 50px 0;
+  padding: 90px 0 294px 0;
+  background-image: url("../../../utils/assets/bookstwo.png");
+  box-shadow: inset 0 0 0 1000px rgba(238, 237, 231, 0.729);
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
 
 .experience-text-container {
@@ -31,6 +36,10 @@
 }
 
 @media (max-width: 770px) {
+  .experience-cover {
+    padding: 90px 0 80px 0;
+    background-position: 80%;
+  }
   .experience-list {
     flex-direction: column;
     align-items: center;
