--- a/src/pages/Experties/Style/Experties.scss
+++ b/src/pages/Experties/Style/Experties.scss
@@ -29,7 +29,7 @@
   // border: 1px solid red;
 
   h6 {
-    font-size: clamp(20px, 25px);
+    font-size: 1.45rem;
     color: $text-color;
     font-weight: 700;
     margin-top: 2.2rem;
