--- a/src/pages/Lecture/Style/Lecture.css
+++ b/src/pages/Lecture/Style/Lecture.css
@@ -38,6 +38,11 @@
   font-size: 1.25rem;
   letter-spacing: 1px;
 }
+.lecture-text span {
+  color: var(--special-color);
+  font-weight: 550;
+  font-size: 1.4rem;
+}
 
 .lecture-image {
   width: clamp(20rem, 40vw, 25rem);
@@ -61,6 +66,6 @@
     text-align: center;
   }
   .lecture-text p {
-    text-align: center;
+    line-height: 1.7;
   }
 }/*# sourceMappingURL=Lecture.css.map */
