--- a/src/pages/Contact/Style/Contact.scss
+++ b/src/pages/Contact/Style/Contact.scss
@@ -151,9 +151,9 @@
   }
 }
 .css-1j3a5ol-JoyTextarea-root {
-  border: 1px solid #c4c4c4 !important;
+  // border: 1px solid #c4c4c4 !important;
   &:hover {
-    border: 1px solid black !important;
+    // border: 1px solid black !important;
   }
 }
 .contact-text-input {
