--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Heebo&display=swap");
 
 :root {
   --inline-padding: clamp(30px, 4vw, 120px);
@@ -7,12 +7,11 @@
   --text-secondary: #788097;
   --special-color: #1089ff;
 }
-/* rgb(238, 237, 231) */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Helvetica;
+  font-family: Heebo, Helvetica, sans-serif;
 }
 html {
   background-color: var(--background-color);
@@ -22,12 +21,10 @@ html {
 body {
   margin: 0;
 }
-
 .app {
   height: 95vh;
   display: flex;
   flex-direction: column;
-  /* gap: 150px; */
 }
 .lecture-and-experties {
   background-image: url("./utils/assets/twofacetwo.png");
