--- a/src/pages/Contact/Style/Contact.scss
+++ b/src/pages/Contact/Style/Contact.scss
@@ -74,6 +74,7 @@
   gap: 1rem;
   background-color: white;
   height: 650px;
+  min-width: 380px;
   padding: 20px 50px;
   p {
     color: red;
@@ -87,8 +88,7 @@
     margin-bottom: 0.4rem;
   }
 }
-// .contact-submit {
-// }
+
 .all-inputs-continer {
   display: flex;
   flex-direction: column;
@@ -150,14 +150,18 @@
     border: 2px solid $text-color;
   }
 }
-.css-1j3a5ol-JoyTextarea-root {
-  // border: 1px solid #c4c4c4 !important;
+
+#my-form .contact-text-input {
+  border-color: #c4c4c4;
   &:hover {
-    // border: 1px solid black !important;
+    border: 1px solid black;
   }
 }
-.contact-text-input {
-  box-shadow: none;
+#my-form .text-input-error {
+  border-color: red;
+  &:hover {
+    border-color: red;
+  }
 }
 .contact-submit {
   display: flex;
@@ -196,6 +200,8 @@
 @media (max-width: 770px) {
   .contact-form {
     align-items: center;
+    min-width: 338px;
+    padding: 20px 35px;
   }
   .all-inputs-continer {
     align-items: center;
