--- a/src/pages/Experience/Style/Experience.scss
+++ b/src/pages/Experience/Style/Experience.scss
@@ -6,7 +6,7 @@
   align-items: center;
   padding: 90px 0 294px 0;
   background-image: url("../../../utils/assets/bookstwo.png");
-  box-shadow: inset 0 0 0 1000px rgba(238, 237, 231, 0.729);
+  box-shadow: inset 0 0 0 1000px rgba(238, 237, 231, 0.88);
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
@@ -17,7 +17,7 @@
   direction: rtl;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   text-align: right;
   h1 {
     margin: auto;
@@ -25,22 +25,6 @@
     font-size: 2rem;
   }
 }
-// .exprience-list-item {
-//   display: flex;
-//   width: clamp(14rem, 30vw, 18rem);
-//   border-radius: 20px;
-//   border: 2px solid rgb(235 233 233);
-//   text-align: center;
-//   background-color: rgb(214, 250, 250);
-//   padding: 10px 20px;
-//   line-height: 2;
-//   font-weight: 400;
-//   font-size: 1.1rem;
-//   letter-spacing: 1px;
-//   box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px,
-//     rgba(0, 0, 0, 0.05) 0px 5px 10px;
-// }
-
 .experience-list {
   display: flex;
   flex-direction: row;
