--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,17 @@ body {
   background-position: 50% 50%;
   background-repeat: no-repeat;
 }
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888888;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
