--- a/src/pages/Contact/Style/Contact.scss
+++ b/src/pages/Contact/Style/Contact.scss
@@ -201,6 +201,7 @@
   .contact-form {
     align-items: center;
     min-width: 338px;
+    width: 85vw;
     padding: 20px 35px;
   }
   .all-inputs-continer {
