--- a/src/pages/Home/Style/Home.css
+++ b/src/pages/Home/Style/Home.css
@@ -62,8 +62,8 @@
   width: 11rem;
   border-radius: 2em;
   align-items: center;
-  background-color: #06f;
-  border: 2px solid #06f;
+  background-color: var(--special-color);
+  border: 2px solid var(--special-color);
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
@@ -83,15 +83,9 @@
   touch-action: manipulation;
 }
 .contact:hover {
-  background-color: #3385ff;
-  border-color: #3385ff;
-  fill: #06f;
-}
-
-.button-58:active {
-  background-color: #3385ff;
-  border-color: #3385ff;
-  fill: #06f;
+  background-color: #ffffff;
+  border-color: var(--special-color);
+  color: var(--special-color);
 }
 
 .home-profile-image {
@@ -152,13 +146,21 @@
     align-items: center;
     gap: 28px;
   }
-  .home-profile-text p {
-    text-align: center;
-  }
   .contact {
     margin-top: 0.5rem;
   }
+  .home-profile-text .title-section .colored-title {
+    color: var(--special-color);
+  }
+  .home-profile-text .title-section h1 {
+    font-size: 58px;
+  }
+  .home-profile-text .title-section h3 {
+    font-size: 27px;
+    letter-spacing: 3px;
+  }
   .home-profile-text .paragraph-section p {
     line-height: 1.7;
+    font-size: 19px;
   }
 }/*# sourceMappingURL=Home.css.map */
