--- a/src/pages/Home/Style/Home.scss
+++ b/src/pages/Home/Style/Home.scss
@@ -30,7 +30,6 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-
     .colored-title {
       color: var(--special-color);
     }
@@ -66,8 +65,8 @@
   width: 11rem;
   border-radius: 2em;
   align-items: center;
-  background-color: #06f;
-  border: 2px solid #06f;
+  background-color: var(--special-color);
+  border: 2px solid var(--special-color);
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
@@ -87,16 +86,10 @@
   touch-action: manipulation;
 
   &:hover {
-    background-color: #3385ff;
-    border-color: #3385ff;
-    fill: #06f;
+    background-color: #ffffff;
+    border-color: var(--special-color);
+    color: var(--special-color);
   }
-}
-
-.button-58:active {
-  background-color: #3385ff;
-  border-color: #3385ff;
-  fill: #06f;
 }
 
 .home-profile-image {
@@ -151,17 +144,29 @@
   .home-profile-text {
     align-items: center;
     gap: 28px;
-    p {
-      text-align: center;
-    }
   }
   .contact {
     margin-top: 0.5rem;
   }
   .home-profile-text {
+    .title-section {
+      .colored-title {
+        color: var(--special-color);
+      }
+      h1 {
+        font-size: 58px;
+      }
+      h3 {
+        font-size: 27px;
+        letter-spacing: 3px;
+      }
+    }
+  }
+  .home-profile-text {
     .paragraph-section {
       p {
         line-height: 1.7;
+        font-size: 19px;
       }
     }
   }
