--- a/src/pages/Lecture/Style/Lecture.scss
+++ b/src/pages/Lecture/Style/Lecture.scss
@@ -30,7 +30,7 @@
   h3 {
     margin-top: 1rem;
     margin-bottom: 0.9rem;
-    font-size: 21px;
+    font-size: 22px;
   }
 
   p {
@@ -38,7 +38,7 @@
     line-height: 2;
     font-weight: 549;
     font-size: 1.25rem;
-    letter-spacing: 1px;
+    // letter-spacing: 1px;
   }
 }
 .lecture-text-sub-title {
@@ -66,8 +66,8 @@
   .lecture-text {
     align-items: center;
     text-align: center;
-    h5 {
-      text-align: center;
+    h3 {
+      margin-bottom: 2rem;
     }
     p {
       line-height: 1.7;
