--- a/src/pages/Treatment/Style/Treatment.css
+++ b/src/pages/Treatment/Style/Treatment.css
@@ -1,17 +1,10 @@
-.Treatment {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.home-study {
   padding: 50px var(--inline-padding);
   font-size: 1.1rem;
   background-color: white;
-}
-
-.home-study {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   width: 100%;
   gap: clamp(2rem, 5vw, 5rem);
   flex-direction: row-reverse;
@@ -41,6 +34,10 @@
   width: clamp(20rem, 40vw, 25rem);
   border-radius: 20px;
   border: 2px solid rgb(212, 211, 211);
+}
+
+.colored-text {
+  color: var(--special-color);
 }
 
 @media (max-width: 770px) {
