--- a/src/pages/Treatment/Style/Treatment.scss
+++ b/src/pages/Treatment/Style/Treatment.scss
@@ -1,17 +1,12 @@
 @import "../../../Style/Variables.scss";
-.Treatment {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+
+.home-study {
   padding: 50px var(--inline-padding);
   font-size: 1.1rem;
   background-color: white;
-}
-.home-study {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   width: 100%;
   gap: clamp(2rem, 5vw, 5rem);
   flex-direction: row-reverse;
@@ -40,6 +35,9 @@
   width: clamp(20rem, 40vw, 25rem);
   border-radius: 20px;
   border: 2px solid rgba(212, 211, 211);
+}
+.colored-text {
+  color: var(--special-color);
 }
 @media (max-width: 770px) {
   .home-study {
